# Cortex

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: qa-scan.yml
cortex_backend/: __init__.py  database.py  main.py
cortex_backend/api/: admin.py  analytics.py  automation.py  github.py  health.py  linear.py  pull_requests.py  qa_execution.py  reports.py
cortex_backend/models/: __init__.py  app_config.py  automation_rule.py  github_config.py  linear_config.py  linear_task.py  pull_request.py  qa_execution.py  qa_finding.py
cortex_backend/services/: admin_settings.py  analytics.py  automation.py  engine_bridge.py  github_service.py
cortex_backend/tasks/: linear_sync.py  pr_fetch.py  qa_runner.py
cortex_engine/: api.py
cortex_engine/agents/: __init__.py  base.py  correctness.py  cross_file.py  design.py  memory.py  registry.py  security.py  validator.py
cortex_engine/assessment/: quality_gate.py  risk_scorer.py
cortex_engine/cli/: run.py
cortex_engine/core/: author_attributor.py  diff_classifier.py  finding_clusterer.py  finding_deduplicator.py  finding_factory.py  finding_line_validator.py  finding_manager.py  finding_ranker.py  schemas.py  snippet_extractor.py  suppression.py
cortex_engine/infrastructure/: change_detector.py  code_graph.py  config.py  config_schema.py  database.py  finding_repository.py  hygiene_checker.py  llm_client.py  repository_resolver.py
cortex_engine/integrations/: dispatcher.py  github.py  linear.py  slack.py
cortex_engine/knowledge/: sast_rules.json
cortex_engine/orchestration/: orchestrator.py  review_engine.py  validation_engine.py
cortex_engine/reporting/: executive_report.py  report_generator.py
cortex_engine/tools/: base.py  (+29 more)
cortex_frontend/: index.html  package-lock.json  package.json
docs/: 01_engineering_planning_document.md  02_architecture_design_specification.md  03_domain_class_design_specification.md  04_agentic_architecture_specification.md  05_implementation_roadmap.md  06_coding_agent_implementation_spec.md  ARCHITECTURE_DIAGRAM.md
prompts/: correctness_agent.txt  cross_file_agent.txt  design_agent.txt  security_agent.txt  validator_agent.txt
tests/: conftest.py
(+175 files in other folders)
