[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-platform"
version = "2.0.0"
description = "Automated QA Platform for quantitative development"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "rich>=13.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
tier1 = [
    "bandit>=1.7",
    "semgrep>=1.50",
    "radon>=6.0",
    "pip-audit>=2.6",
    "mypy>=1.5",
    "sqlfluff>=3.0",
    "checkov>=3.0",
    "pip-licenses>=4.0",
]

[project.scripts]
qa = "qa_platform.cli.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
