[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-qa-platform"
version = "2.0.0"
description = "Cortex — Automated QA Platform for code review and analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "rich>=13.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
tier1 = [
    "bandit>=1.7",
    "semgrep>=1.50",
    "radon>=6.0",
    "pip-audit>=2.6",
    "mypy>=1.5",
    "sqlfluff>=3.0",
    "checkov>=3.0",
    "pip-licenses>=4.0",
]
backend = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "python-dateutil>=2.8",
]

[project.scripts]
cortex-qa = "cortex_engine.cli.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex_engine*", "cortex_backend*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
